--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.71.5",
-    "react-native-webview": "^11.26.1"
+    "react-native-video": "^5.2.1",
+    "react-native-webview": "^12.0.0",
+    "shaka-player": "^4.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
